--- a/public/stylesheets/shared/fader.css
+++ b/public/stylesheets/shared/fader.css
@@ -1,5 +1,6 @@
 .fade-in {
   opacity: 0;
+  max-width: 300px;
   transition: opacity 250ms ease-in;
 }
 
