--- a/public/stylesheets/shared/header.css
+++ b/public/stylesheets/shared/header.css
@@ -49,12 +49,25 @@ header {
 .header-submenus {
   margin: 0;
   padding-left: 0;
-  display: flex;
   column-gap: 1rem;
 }
 
 .header-sign-menus li {
   text-align: left;
+}
+
+@media (min-width: 530px) {
+  .header-nav .header-sign-menus {
+    display: flex;
+    gap: 1rem;
+  }
+}
+
+@media (min-width: 450px) {
+  .header-nav .header-submenus {
+    display: flex;
+    gap: 1rem;
+  }
 }
 
 .dropdown.active > .link,
@@ -89,13 +102,6 @@ header {
 .dropdown-links {
   padding: 1rem;
   border-radius: 0 0 1rem 1rem;
-}
-
-@media (min-width: 380px) {
-  .header-nav ul {
-    display: flex;
-    gap: 1rem;
-  }
 }
 
 .skip-nav-link {
